@@ -3,6 +3,8 @@ package ru.merkii.rduels.util;
 import lombok.experimental.UtilityClass;
 import org.bukkit.Bukkit;
 import org.bukkit.GameMode;
+import org.bukkit.attribute.Attribute;
+import org.bukkit.attribute.AttributeInstance;
 import org.bukkit.entity.Player;
 import ru.merkii.rduels.adapter.DuelPlayer;
 import ru.merkii.rduels.adapter.bukkit.BukkitAdapter;
@@ -29,6 +31,16 @@ public class PlayerUtil {
         }
     }
 
+    /** Restores the vanilla max-health attribute after kits with a custom max-hearts rule. */
+    public static void resetMaxHealth(Player... players) {
+        for (Player player : players) {
+            AttributeInstance maxHealth = player.getAttribute(Attribute.GENERIC_MAX_HEALTH);
+            if (maxHealth != null && maxHealth.getBaseValue() != maxHealth.getDefaultValue()) {
+                maxHealth.setBaseValue(maxHealth.getDefaultValue());
+            }
+        }
+    }
+
     public static void sendMessage(String text, Player... players) {
         for (Player player : players) {
             player.sendMessage(text);
@@ -40,7 +52,10 @@ public class PlayerUtil {
     }
 
     public static List<DuelPlayer> duelPlayersConvertListUUID(List<UUID> uuids) {
-        return uuids.stream().map(BukkitAdapter::getPlayer).toList();
+        return uuids.stream()
+                .map(BukkitAdapter::getPlayer)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
     }
 
 }
